# sentinel

./: .clang_complete  .gitignore  CMakeLists.txt  LICENSE  README.md  Vagrantfile  sentinel.json  sentinel.toml
data/: Sentinel Plot.ipynb
data/jq/: README.md  limit_current.jq  quad_count.jq  quad_current.jq
src/: CMakeLists.txt  board_tests.cc  board_tests.h  sentinel.cc  sentinel.h  test.cc  test.h
